using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace odyssey {

    public class OdysseyConstant : MonoBehaviour {
        public static string layerMaskGround = "Ground";

        public static string buttonJump = "Jump";

        public static string inputHorizontal = "Horizontal";

        public static string statsIdle = "idle";
        public static string statsFalling = "falling";
        public static string statsJumping = "jumping";
        public static string statsDeath = "death";
        public static string statsHurt = "hurt";

        public static string tagEnemy = "Enemy";


    }

}

